--- a/Index.html
+++ b/Index.html
@@ -99,7 +99,7 @@
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
                     <p>
-                        I'm currently working as Software Engineer at Perfex Technologies and graduated from Annamacharya Institute of Technology and Sciences, Rajempet in 2019 with 72.13%.
+                        I'm currently working as Software Engineer and graduated from Annamacharya Institute of Technology and Sciences, Rajempet in 2019 with 72.13%.
                         <br>
                         I've experience as a Production Engineer in the Transformers Manufacturer Company in the Fabrication Department.
                        
